--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -7,9 +7,9 @@ control-plane1 ansible_host=10.233.44.77 ip=192.168.0.77
 compute-plane3 ansible_host=10.233.44.82 ip=192.168.0.82
 compute-plane2 ansible_host=10.233.44.81 ip=192.168.0.81
 compute-plane1 ansible_host=10.233.44.80 ip=192.168.0.80
-compute-plane5 ansible_host=10.233.44.84 ip=192.168.0.84
-compute-plane4 ansible_host=10.233.44.83 ip=192.168.0.83
-compute-plane6 ansible_host=10.233.44.85 ip=192.168.0.85
+#compute-plane5 ansible_host=10.233.44.84 ip=192.168.0.84
+#compute-plane4 ansible_host=10.233.44.83 ip=192.168.0.83
+#compute-plane6 ansible_host=10.233.44.85 ip=192.168.0.85
 
 # ## configure a bastion host if your nodes are not directly reachable
 # bastion ansible_host=x.x.x.x ansible_user=some_user
@@ -21,7 +21,6 @@ localhost ansible_connection=local
 control-plane[1:3]
 
 [prod-compute]
-compute-plane[4:6]
 
 [dev-compute]
 compute-plane[1:3]
@@ -30,7 +29,6 @@ compute-plane[1:3]
 compute-plane[1:3]
 
 [prod-osd-node]
-compute-plane[4:6]
 
 [osd-nodes:children]
 prod-osd-node
