--- a/roles/deploy_osh/tasks/gen_password.yaml
+++ b/roles/deploy_osh/tasks/gen_password.yaml
@@ -2,29 +2,23 @@
   - name: "Gen password for {{endpoint.key}}"
     copy:
       content: "{%if gen_passwd %}{{lookup('password', '/dev/null chars=ascii_letters length=15')}}{%else%}{{endpoints[endpoint.key]['auth'][item.key]['password']}}{%endif%}"
-      dest: "{{inventory_dir+'/credentials/'+endpoint.key+'_'+item.key+'.creds'}}"
+      dest: "{{inventory_dir+'/credentials/'+endpoint.key+'.'+item.key+'.creds'}}"
       force: no
     with_dict:
     - "{{endpoint.value.auth}}"
   - name: "Get password for {{endpoint.key}}"
     set_fact: 
-      "{{endpoint.key}}_{{item.key}}_pwd": "{{ lookup('file', inventory_dir+'/credentials/'+endpoint.key+'_'+item.key+'.creds') }}"
+      "{{endpoint.key}}_{{item.key}}_pwd": "{{ lookup('file', inventory_dir+'/credentials/'+endpoint.key+'.'+item.key+'.creds') }}"
     with_dict:
     - "{{endpoint.value.auth}}"
-  when: "endpoint.key not in  ['ceph_object_store', 'oslo_db_api', 'oslo_db_cell0'] and item.key not in ['user']"
+  when: "endpoint.key not in  ['ceph_object_store'] and endpoint.value.auth[item.key].link is not defined"
 
-# Handle exceptions for users which have got one more endpoints
-- name: Get password for rabbitmq endpoint 'user'
-  set_fact: 
-    "oslo_messaging_user_pwd": "{{ lookup('file', inventory_dir+'/credentials/oslo_messaging_admin.creds') }}"
-  when: "endpoint.key == 'oslo_messaging'"
-- name: Get password for oslo_db_api, oslo_db_cell0
-  set_fact: 
-    "{{item}}_nova_pwd": "{{ lookup('file', inventory_dir+'/credentials/oslo_db_nova.creds') }}"
-  with_items:
-  - "oslo_db_cell0"
-  - "oslo_db_api"
-  when: "endpoint.key == item"
+- name: "{{endpoint.key}}: Handle exeptions (user present in one more endpoint)"
+  set_fact:
+    "{{endpoint.key}}_{{item.key}}_pwd": "{{lookup('file', inventory_dir+'/credentials/'+endpoint.value.auth[item.key].link+'.creds') }}"
+  with_dict:
+  - "{{endpoint.value.auth}}"
+  when: "endpoint.key not in  ['ceph_object_store'] and endpoint.value.auth[item.key].link is defined"
 
 # Exception for s3 passwords
 - name: "Passwords for {{endpoint.key}}"
@@ -32,14 +26,14 @@
   - name: "Gen password for {{endpoint.key}}"
     copy:
       content: "{%if gen_passwd %}{{lookup('password', '/dev/null chars=ascii_letters length=15')}}{%else%}{{endpoints[endpoint.key]['auth'][item.0][item.1]}}{%endif%}"
-      dest: "{{inventory_dir+'/credentials/'+endpoint.key+'_'+item.0+'_'+item.1+'.creds'}}"
+      dest: "{{inventory_dir+'/credentials/'+endpoint.key+'.'+item.0+'.'+item.1+'.creds'}}"
       force: no
     with_nested:
     - "{{endpoint.value.auth|list}}"
     - ['access_key', 'secret_key']
   - name: "Get password for {{endpoint.key}}"
     set_fact:
-      "{{endpoint.key}}_{{item.0}}_{{item.1}}_pwd": "{{lookup('file', inventory_dir+'/credentials/'+endpoint.key+'_'+item.0+'_'+item.1+'.creds')}}"
+      "{{endpoint.key}}_{{item.0}}_{{item.1}}_pwd": "{{lookup('file', inventory_dir+'/credentials/'+endpoint.key+'.'+item.0+'.'+item.1+'.creds')}}"
     with_nested:
     - "{{endpoint.value.auth|list}}"
     - ['access_key', 'secret_key']
