--- a/roles/deploy_osh/tasks/generate_main.yaml
+++ b/roles/deploy_osh/tasks/generate_main.yaml
@@ -32,6 +32,22 @@
 - name: Generate nova metadata sercet key
   set_fact:
     metadata_secret_key: "{{identity_neutron_pwd|hash('md5')}}"
+- name: Generate OSH INFRA helm override values
+  template:
+    src: "{{item.name}}.yaml.j2"
+    dest: "{{inventory_dir}}/artifacts/helm_vars_{{item.name}}.yaml"
+  with_items:
+  - "{{components.INFRA_CORE}}"
+  register: helm_INFRA_CORE_gen_res
+  when: "components.INFRA_CORE is defined"
+- name: Generate MONITORING helm override values
+  template:
+    src: "{{item.name}}.yaml.j2"
+    dest: "{{inventory_dir}}/artifacts/helm_vars_{{item.name}}.yaml"
+  with_items:
+  - "{{components.MONITORING}}"
+  register: helm_MONITORING_gen_res
+  when: "components.MONITORING is defined"
 - name: Generate OSH CORE helm override values
   template:
     src: "{{item.name}}.yaml.j2"
@@ -39,12 +55,14 @@
   with_items:
   - "{{components.OSH_CORE}}"
   register: helm_OSH_CORE_gen_res
+  when: "components.OSH_CORE is defined"
 - name:  Generate CONTRAIL common override values
   template:
     src: helm_vars_contrail_common.yaml.j2
     force: true
     dest: "{{inventory_dir}}/artifacts/helm_vars_contrail_common.yaml"
   register: helm_vars_contrail_common_gen_res
+  when: "components.CONTRAIL is defined"
 - name:  Generate OS SUPPLEMENTARY common override values
   template:
     src: "{{item.name}}.yaml.j2"
@@ -52,3 +70,4 @@
   with_items:
   - "{{components.OS_SUPPL}}"
   register: helm_OS_SUPPL_gen_res
+  when: "components.OS_SUPPL is defined"
