--- a/inventory/helm_vars/components.yaml
+++ b/inventory/helm_vars/components.yaml
@@ -1,17 +1,11 @@
 ---
-OSH_CORE:
+INFRA_CORE:
 - name: ingress-kube-system
   path: openstack-helm-infra/ingress
   namespace: kube-system
-- name: ingress-openstack
-  path: openstack-helm-infra/ingress
-  namespace: openstack
 - name: ingress-ceph
   path: openstack-helm-infra/ingress
   namespace: ceph
-- name: ingress-contrail
-  path: openstack-helm-infra/ingress
-  namespace: contrail
 - name: ceph-mon
   path: openstack-helm-infra/ceph-mon
   namespace: ceph
@@ -24,65 +18,85 @@ OSH_CORE:
 - name: ceph-provisioners
   path: openstack-helm-infra/ceph-provisioners
   namespace: ceph
-- name: ceph-openstack-config
+- name: ingress-osh-infra
+  path: openstack-helm-infra/ingress
+  namespace: osh-infra
+- name: ceph-osh-infra-config
   path: openstack-helm-infra/ceph-provisioners
-  namespace: openstack
-- name: mariadb
-  path: openstack-helm-infra/mariadb
-  namespace: openstack
-- name: rabbitmq
-  path: openstack-helm-infra/rabbitmq
-  namespace: openstack
-- name: memcached
-  path: openstack-helm-infra/memcached
-  namespace: openstack
-- name: keystone
-  path: openstack-helm/keystone
-  namespace: openstack
-- name: radosgw-openstack
-  path: openstack-helm-infra/ceph-rgw
-  namespace: openstack
-- name: glance 
-  path: openstack-helm/glance
-  namespace: openstack
-- name: cinder
-  path: openstack-helm/cinder
-  namespace: openstack
-- name: libvirt
-  path: openstack-helm-infra/libvirt
-  namespace: openstack
-- name: nova
-  path: openstack-helm/nova_contrail
-  namespace: openstack
-- name: neutron
-  path: openstack-helm/neutron_contrail
-  namespace: openstack
-- name: horizon
-  path: openstack-helm/horizon
-  namespace: openstack
-CONTRAIL:
-- name: contrail-thirdparty
-  namespace: contrail
-  path: contrail-helm-deployer/contrail-thirdparty
-- name: contrail-controller
-  namespace: contrail
-  path: contrail-helm-deployer/contrail-controller
-- name: contrail-analytics
-  namespace: contrail
-  path: contrail-helm-deployer/contrail-analytics
-- name: contrail-vrouter
-  namespace: contrail
-  path: contrail-helm-deployer/contrail-vrouter
-OS_SUPPL:
-- name: heat
-  path: openstack-helm/heat
-  namespace: openstack
-- name: gnocchi
-  path: openstack-helm-infra/gnocchi
-  namespace: openstack
-- name: elasticsearch
-  path: openstack-helm-infra/elasticsearch
-  namespace: openstack
-- name: ceilometer
-  namespace: openstack
-  path: openstack-helm/ceilometer
+  namespace: osh-infra
+- name: ldap
+  path: openstack-helm-infra/ldap
+  namespace: osh-infra
+#MONITORING:
+#- name: prometheus
+#  path: openstack-helm-infra/prometheus
+#  namespace: osh-infra
+#- name: elasticsearch
+#  path: openstack-helm-infra/elasticsearch
+#  namespace: openstack
+#OSH_CORE:
+#- name: ingress-openstack
+#  path: openstack-helm-infra/ingress
+#  namespace: openstack
+#- name: ingress-contrail
+#  path: openstack-helm-infra/ingress
+#  namespace: contrail
+#- name: ceph-openstack-config
+#  path: openstack-helm-infra/ceph-provisioners
+#  namespace: openstack
+#- name: mariadb
+#  path: openstack-helm-infra/mariadb
+#  namespace: openstack
+#- name: rabbitmq
+#  path: openstack-helm-infra/rabbitmq
+#  namespace: openstack
+#- name: memcached
+#  path: openstack-helm-infra/memcached
+#  namespace: openstack
+#- name: keystone
+#  path: openstack-helm/keystone
+#  namespace: openstack
+#- name: radosgw-openstack
+#  path: openstack-helm-infra/ceph-rgw
+#  namespace: openstack
+#- name: glance 
+#  path: openstack-helm/glance
+#  namespace: openstack
+#- name: cinder
+#  path: openstack-helm/cinder
+#  namespace: openstack
+#- name: libvirt
+#  path: openstack-helm-infra/libvirt
+#  namespace: openstack
+#- name: nova
+#  path: openstack-helm/nova_contrail
+#  namespace: openstack
+#- name: neutron
+#  path: openstack-helm/neutron_contrail
+#  namespace: openstack
+#- name: horizon
+#  path: openstack-helm/horizon
+#  namespace: openstack
+#CONTRAIL:
+#- name: contrail-thirdparty
+#  namespace: contrail
+#  path: contrail-helm-deployer/contrail-thirdparty
+#- name: contrail-controller
+#  namespace: contrail
+#  path: contrail-helm-deployer/contrail-controller
+#- name: contrail-analytics
+#  namespace: contrail
+#  path: contrail-helm-deployer/contrail-analytics
+#- name: contrail-vrouter
+#  namespace: contrail
+#  path: contrail-helm-deployer/contrail-vrouter
+#OS_SUPPL:
+#- name: heat
+#  path: openstack-helm/heat
+#  namespace: openstack
+#- name: gnocchi
+#  path: openstack-helm-infra/gnocchi
+#  namespace: openstack
+#- name: ceilometer
+#  namespace: openstack
+#  path: openstack-helm/ceilometer
