--- a/roles/deploy_osh/tasks/monitoring.yaml
+++ b/roles/deploy_osh/tasks/monitoring.yaml
@@ -1,17 +1,17 @@
-- name: Link helm-toolkit package to OS SUPPLEMENTARY charts
+- name: Link helm-toolkit package to MONITORING charts
   file: 
     src: "{{playbook_dir}}/openstack-helm-infra/helm-toolkit/charts"
     dest: "{{playbook_dir}}/{{item.path}}/charts"
     state: link
   with_items:
-  - "{{components.OS_SUPPL}}"
-  when: "components.OS_SUPPL is defined"
-- name: Deploy OS SUPPLEMENTARY
+  - "{{components.MONITORING}}"
+  when: "components.MONITORING is defined"
+- name: Deploy MONITORING
   shell: "{{helm_bin}} upgrade --install {{item['item']['name']}} {{playbook_dir}}/{{item['item']['path']}} \
          --namespace={{item['item']['namespace']}} \
          --values={{inventory_dir}}/artifacts/helm_vars_common.yaml \
          --values={{inventory_dir}}/artifacts/helm_vars_{{item['item']['name']}}.yaml \
          && {{playbook_dir}}/openstack-helm/tools/deployment/common/wait-for-pods.sh {{item['item']['namespace']}}"
   with_items:
-  - "{{helm_OS_SUPPL_gen_res.results}}"
-  when: "helm_OS_SUPPL_gen_res.results is defined and (helm_vars_common_gen_res.changed or item.changed)"
+  - "{{helm_MONITORING_gen_res.results}}"
+  when: "(helm_MONITORING_gen_res.results is defined) and (helm_vars_common_gen_res.changed or item.changed)"
