--- a/roles/deploy_osh/tasks/osh-infra.yaml
+++ b/roles/deploy_osh/tasks/osh-infra.yaml
@@ -6,15 +6,15 @@
   shell: "{{helm_bin}} package -d {{playbook_dir}}/openstack-helm-infra/helm-toolkit/charts openstack-helm-infra/helm-toolkit"
   args:
     creates: "{{playbook_dir}}/openstack-helm-infra/helm-toolkit/charts/helm-toolkit-0.1.0.tgz"
-- name: Link helm-toolkit package to OSH charts
+- name: Link helm-toolkit package to OSH INFRA charts
   file: 
     src: "{{playbook_dir}}/openstack-helm-infra/helm-toolkit/charts"
     dest: "{{playbook_dir}}/{{item.path}}/charts"
     state: link
   with_items:
-  - "{{components.OSH_CORE}}"
-  when: "components.OSH_CORE is defined"
-- name: Deploy OSH CORE
+  - "{{components.INFRA_CORE}}"
+  when: "components.INFRA_CORE is defined"
+- name: Deploy INFRA CORE
   shell: "{{helm_bin}} upgrade --install {{item['item']['name']}} {{playbook_dir}}/{{item['item']['path']}} \
          --namespace={{item['item']['namespace']}} \
          --values={{inventory_dir}}/artifacts/helm_vars_common.yaml \
@@ -23,5 +23,5 @@
          && {{playbook_dir}}/openstack-helm/tools/deployment/common/wait-for-pods.sh {{item['item']['namespace']}}
          {% endif %}"
   with_items:
-  - "{{helm_OSH_CORE_gen_res.results}}"
-  when: "helm_OSH_CORE_gen_res.results is defined and (helm_vars_common_gen_res.changed or item.changed)"
+  - "{{helm_INFRA_CORE_gen_res.results}}"
+  when: "helm_INFRA_CORE_gen_res.results is defined and (helm_vars_common_gen_res.changed or item.changed)"
