Add deploy monitoring

--- a/deploy.yaml
+++ b/deploy.yaml
@@ -26,3 +26,5 @@
 - hosts: master
   roles:
   - { role: deploy_osh, tags: [osh]}
+  environment:
+    KUBECONFIG: "{{inventory_dir}}/artifacts/admin.conf"
