--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 [submodule "contrail-helm-deployer"]
 	path = contrail-helm-deployer
 	url = https://github.com/and-1/contrail-helm-deployer.git
+[submodule "kolla"]
+	path = kolla
+	url = https://github.com/and-1/kolla.git
+	branch = stable/queens
