--- a/inventory/group_vars/k8s-cluster/k8s-net-calico.yml
+++ b/inventory/group_vars/k8s-cluster/k8s-net-calico.yml
@@ -18,8 +18,9 @@ global_as_num: "64546"
 # not be specified in calico CNI config, so Calico will use built-in
 # defaults. The value should be a number, not a string.
 # calico_mtu: 1500
+calico_felix_prometheusmetricsenabled: "true"
 
 # IPIP tunel enable
-ipip: false
+ipip: "false"
 #ipip_mode: CrossSubnet
 calico_ip_auto_method: "interface={{k8s_iface}}"
