--- a/inventory/helm_vars/endpoints.yaml
+++ b/inventory/helm_vars/endpoints.yaml
@@ -249,6 +249,8 @@ monitoring:
     admin:
       username: admin
       password: changeme
+    user:
+      link: monitoring.admin
 grafana:
   auth:
     admin:
