Fix force flag issue

--- a/inventory/helm_vars/components.yaml
+++ b/inventory/helm_vars/components.yaml
@@ -77,57 +77,57 @@ LOGGING:
 - name: kibana
   path: openstack-helm-infra/kibana
   namespace: osh-infra
-#OSH_CORE:
-#- name: rabbitmq
-#  path: openstack-helm-infra/rabbitmq
-#  namespace: openstack
-#- name: memcached
-#  path: openstack-helm-infra/memcached
-#  namespace: openstack
-#- name: keystone
-#  path: openstack-helm/keystone
-#  namespace: openstack
-#- name: radosgw-openstack
-#  path: openstack-helm-infra/ceph-rgw
-#  namespace: openstack
-#- name: glance 
-#  path: openstack-helm/glance
-#  namespace: openstack
-#- name: cinder
-#  path: openstack-helm/cinder
-#  namespace: openstack
-#- name: libvirt
-#  path: openstack-helm-infra/libvirt
-#  namespace: openstack
-#- name: nova
-#  path: openstack-helm/nova_contrail
-#  namespace: openstack
-#- name: neutron
-#  path: openstack-helm/neutron_contrail
-#  namespace: openstack
-#- name: horizon
-#  path: openstack-helm/horizon
-#  namespace: openstack
-#CONTRAIL:
-#- name: contrail-thirdparty
-#  namespace: contrail
-#  path: contrail-helm-deployer/contrail-thirdparty
-#- name: contrail-controller
-#  namespace: contrail
-#  path: contrail-helm-deployer/contrail-controller
-#- name: contrail-analytics
-#  namespace: contrail
-#  path: contrail-helm-deployer/contrail-analytics
-#- name: contrail-vrouter
-#  namespace: contrail
-#  path: contrail-helm-deployer/contrail-vrouter
-#OS_SUPPL:
-#- name: heat
-#  path: openstack-helm/heat
-#  namespace: openstack
-#- name: gnocchi
-#  path: openstack-helm-infra/gnocchi
-#  namespace: openstack
-#- name: ceilometer
-#  namespace: openstack
-#  path: openstack-helm/ceilometer
+OSH_CORE:
+- name: rabbitmq
+  path: openstack-helm-infra/rabbitmq
+  namespace: openstack
+- name: memcached
+  path: openstack-helm-infra/memcached
+  namespace: openstack
+- name: keystone
+  path: openstack-helm/keystone
+  namespace: openstack
+- name: radosgw-openstack
+  path: openstack-helm-infra/ceph-rgw
+  namespace: openstack
+- name: glance 
+  path: openstack-helm/glance
+  namespace: openstack
+- name: cinder
+  path: openstack-helm/cinder
+  namespace: openstack
+- name: libvirt
+  path: openstack-helm-infra/libvirt
+  namespace: openstack
+- name: nova
+  path: openstack-helm/nova_contrail
+  namespace: openstack
+- name: neutron
+  path: openstack-helm/neutron_contrail
+  namespace: openstack
+- name: horizon
+  path: openstack-helm/horizon
+  namespace: openstack
+CONTRAIL:
+- name: contrail-thirdparty
+  namespace: contrail
+  path: contrail-helm-deployer/contrail-thirdparty
+- name: contrail-controller
+  namespace: contrail
+  path: contrail-helm-deployer/contrail-controller
+- name: contrail-analytics
+  namespace: contrail
+  path: contrail-helm-deployer/contrail-analytics
+- name: contrail-vrouter
+  namespace: contrail
+  path: contrail-helm-deployer/contrail-vrouter
+OS_SUPPL:
+- name: heat
+  path: openstack-helm/heat
+  namespace: openstack
+- name: gnocchi
+  path: openstack-helm-infra/gnocchi
+  namespace: openstack
+- name: ceilometer
+  namespace: openstack
+  path: openstack-helm/ceilometer
