--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -23,7 +23,7 @@ control-plane[1:3]
 compute-plane[1:3]
 
 [dev-osd-node]
-compute-plane1 osd_jour=vdb
+compute-plane1 osd_jour=vdc
 compute-plane2 osd_jour=vdc
 compute-plane3 osd_jour=vdd
 
