--- a/roles/deploy_osh/tasks/gen_password.yaml
+++ b/roles/deploy_osh/tasks/gen_password.yaml
@@ -1,40 +1,33 @@
-- block:
-  - name: "Gen password for {{endpoint.key}}"
-    copy:
-      content: "{%if gen_passwd %}{{lookup('password', '/dev/null chars=ascii_letters length=15')}}{%else%}{{endpoints[endpoint.key]['auth'][item.key]['password']}}{%endif%}"
-      dest: "{{inventory_dir+'/credentials/'+endpoint.key+'.'+item.key+'.creds'}}"
-      force: no
-    with_dict:
-    - "{{endpoint.value.auth}}"
-  - name: "Get password for {{endpoint.key}}"
-    set_fact: 
-      "{{endpoint.key}}_{{item.key}}_pwd": "{{ lookup('file', inventory_dir+'/credentials/'+endpoint.key+'.'+item.key+'.creds') }}"
-    with_dict:
-    - "{{endpoint.value.auth}}"
-  when: "endpoint.key not in  ['ceph_object_store'] and endpoint.value.auth[item.key].link is not defined"
-
-- name: "{{endpoint.key}}: Handle exeptions (user present in one more endpoint)"
-  set_fact:
-    "{{endpoint.key}}_{{item.key}}_pwd": "{{lookup('file', inventory_dir+'/credentials/'+endpoint.value.auth[item.key].link+'.creds') }}"
+- name: "Gen password for {{endpoint.key}}"
+  set_fact: 
+    "{{endpoint.key}}_{{item.key}}_pwd": "
+{%- if item.value.link is defined -%}
+{%- if gen_passwd -%}
+{{lookup('password', inventory_dir+'/credentials/'+item.value.link+'.creds chars=ascii_letters length=15')}}
+{%- else -%}
+{{endpoints[item.value.link.split('.').0]['auth'][item.value.link.split('.').1]['password']}}
+{%- endif -%}
+{%- else -%}
+{%- if gen_passwd -%}
+{{lookup('password', inventory_dir+'/credentials/'+endpoint.key+'.'+item.key+'.creds chars=ascii_letters length=15')}}
+{%- else -%}
+{{endpoints[endpoint.key]['auth'][item.key]['password']}}
+{%- endif -%}
+{%- endif %}"
   with_dict:
   - "{{endpoint.value.auth}}"
-  when: "endpoint.key not in  ['ceph_object_store'] and endpoint.value.auth[item.key].link is defined"
+  when: "endpoint.key not in  ['ceph_object_store']"
 
 # Exception for s3 passwords
-- name: "Passwords for {{endpoint.key}}"
-  block:
-  - name: "Gen password for {{endpoint.key}}"
-    copy:
-      content: "{%if gen_passwd %}{{lookup('password', '/dev/null chars=ascii_letters length=15')}}{%else%}{{endpoints[endpoint.key]['auth'][item.0][item.1]}}{%endif%}"
-      dest: "{{inventory_dir+'/credentials/'+endpoint.key+'.'+item.0+'.'+item.1+'.creds'}}"
-      force: no
-    with_nested:
-    - "{{endpoint.value.auth|list}}"
-    - ['access_key', 'secret_key']
-  - name: "Get password for {{endpoint.key}}"
-    set_fact:
-      "{{endpoint.key}}_{{item.0}}_{{item.1}}_pwd": "{{lookup('file', inventory_dir+'/credentials/'+endpoint.key+'.'+item.0+'.'+item.1+'.creds')}}"
-    with_nested:
-    - "{{endpoint.value.auth|list}}"
-    - ['access_key', 'secret_key']
+- name: "Gen password for {{endpoint.key}}"
+  set_fact:
+    "{{endpoint.key}}_{{item.0}}_{{item.1}}_pwd": "
+{%- if gen_passwd -%}
+{{lookup('password', inventory_dir+'/credentials/'+endpoint.key+'.'+item.0+'.'+item.1+'.creds chars=ascii_letters length=15')}}
+{%- else -%}
+{{endpoints[endpoint.key]['auth'][item.0][item.1]}}
+{%- endif %}"
+  with_nested:
+  - "{{endpoint.value.auth|list}}"
+  - ['access_key', 'secret_key']
   when: "endpoint.key == 'ceph_object_store'"
