--- a/roles/deploy_osh/tasks/main.yml
+++ b/roles/deploy_osh/tasks/main.yml
@@ -7,49 +7,42 @@
   - images
   - endpoints
   - components
-- name: Download helm binary
-  unarchive:
-    src: "https://storage.googleapis.com/kubernetes-helm/helm-{{helm_version}}-linux-amd64.tar.gz"
-    dest: "/tmp"
-    remote_src: true
-    creates: "/tmp/linux-amd64"
-- name: Copy helm binary to artifactsdir
-  copy:
-    src: "/tmp/linux-amd64/helm"
-    dest: "{{inventory_dir}}/artifacts/"
-    mode: 755
-- name: Set fact for convenient
-  set_fact: 
-    helm_bin: "{{inventory_dir}}/artifacts/helm"
-- name: Init helm
-  shell: "{{helm_bin}} init --history-max 5 --upgrade"
+- name: Set component with not wait ready status
+  set_fact:
+    no_wait: 
+    - 'nova'
+    - 'prometheus-openstack-exporter'
+- name: Prepare helm and tools
+  include: prepare_helm.yaml
 - name: Generate info
   include: generate_main.yaml
-  tags:
-  - gen_values
 - name: Deploy INFRA essensial
-  include: osh-infra.yaml
-  tags:
-  - osh_infra
+  include: deploy_common.yaml GROUP="OSH_INFRA"
+  with_items:
+  - "{{components.INFRA_CORE}}"
+  when: "components.INFRA_CORE is defined"
 - name: Deploy MONITORING
-  include: monitoring.yaml
-  tags:
-  - osh_mon
-  when: "monitoring"
+  include: deploy_common.yaml GROUP="MONITORING"
+  with_items:
+  - "{{components.MONITORING}}"
+  when: "components.INFRA_CORE is defined and monitoring"
 - name: Deploy LOGGING
-  include: logging.yaml
-  tags:
-  - osh_log
-  when: "logging"
+  include: deploy_common.yaml GROUP="LOGGING"
+  with_items:
+  - "{{components.LOGGING}}"
+  when: "components.INFRA_CORE is defined and logging"
 - name: Deploy OSH essensial
-  include: osh-core.yaml
-  tags:
-  - osh_core
+  include: deploy_common.yaml GROUP="OSH_CORE"
+  with_items:
+  - "{{components.OSH_CORE}}"
+  when: "components.OSH_CORE is defined"
 - name: Deploy CONTRAIL components
-  include: contrail.yaml
-  tags:
-  - contrail
+  include: deploy_contrail.yaml GROUP="CONTRAIL"
+  with_items:
+  - "{{components.CONTRAIL}}"
+  when: "components.CONTRAIL is defined"
 - name: Deploy OS SUPPLEMENTARY components
-  include: os-suppl.yaml
-  tags:
-  - os_suppl
+  include: deploy_common.yaml GROUP="OS_SUPPL"
+  with_items:
+  - "{{components.OS_SUPPL}}"
+  when: "components.OS_SUPPL is defined"
