--- a/roles/deploy_osh/tasks/main.yml
+++ b/roles/deploy_osh/tasks/main.yml
@@ -25,12 +25,12 @@
   include: deploy_common.yaml GROUP="MONITORING"
   with_items:
   - "{{components.MONITORING}}"
-  when: "components.INFRA_CORE is defined and monitoring"
+  when: "components.INFRA_MONITORING is defined and monitoring"
 - name: Deploy LOGGING
   include: deploy_common.yaml GROUP="LOGGING"
   with_items:
   - "{{components.LOGGING}}"
-  when: "components.INFRA_CORE is defined and logging"
+  when: "components.LOGGING is defined and logging"
 - name: Deploy OSH essensial
   include: deploy_common.yaml GROUP="OSH_CORE"
   with_items:
